--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
-envlist = p33,p34,py35,py36,py37,py38,py39
+envlist = py36,py37,py38
 
 [testenv]
-deps = -rrequirements-dev.txt
+deps = 
+    -r{toxinidir}/requirements-dev.txt
+
 commands = 
-    {posargs:tests}
+    pytest {posargs:tests}
